[package]
name = "hello_rust_module"
version = "0.1.0"
authors = ["Waridley <waridley64@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
godot_module_bindings = { path = "../rust_bindings" }

[build-dependencies]
cbindgen = "0.13.1"
modulator = "0.1.0"