cmake_minimum_required(VERSION 3.6)
project(OSOG)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(GODOT_ROOT_DIR ../../../..)

# Get sources
file(GLOB_RECURSE SOURCES ${GODOT_ROOT_DIR}/*.c**)
file(GLOB_RECURSE HEADERS ${GODOT_ROOT_DIR}/*.h**)

add_executable(${PROJECT_NAME} ${SOURCES} ${HEADERS})
target_include_directories(${PROJECT_NAME}
        SYSTEM PUBLIC
        ${GODOT_ROOT_DIR}
        ${GODOT_ROOT_DIR}/modules/gdnative/include
        ${GODOT_ROOT_DIR}/thirdparty/bullet)

add_definitions(
        -DALSA_ENABLED -DALSAMIDI_ENABLED -DCOREAUDIO_ENABLED -DPULSEAUDIO_ENABLED -DWASAPI_ENABLED -DXAUDIO2_ENABLED -DJACK_ENABLED
        -DIPHONE_ENABLED -DGAME_CENTER_ENABLED -DSTOREKIT_ENABLED -DICLOUD_ENABLED
        -DUNIX_ENABLED -D__GNUC__ -DUDEV_ENABLED -DJOYDEV_ENABLED
        -DDEBUG_ENABLED -DTOOLS_ENABLED -DMINIZIP_ENABLED
)
